frontend/styles/sudoku.sass
/* ... */
@mixin sudokuGrid($type: 3, $tdHeight: 4rem, $maxTdHeight: 100px, $fontSize: 2em)

  &__grid_congrats_wrapper
    position: relative
    background-image: linear-gradient(#5d94de, #77c1ea)
    height: 100%

  &__no_display
    display: none

  &__congrats_wrapper
    display: flex
    justify-content: center
    align-content: center
    flex-wrap: wrap
    color: white
    text-transform: capitalize
    position: absolute
    width: 100%
    height: 100%

    svg
      fill: $mainNavBarColor
      width: 40px * $type
      margin: 4px


    div
      width: 100%
      margin: 10px
      text-align: center
      font-size: 2rem + ($type / 10)

    button
      font-size: 0.9rem + ($type / 10)
      padding: 5px 10px
      color: inherit
      text-transform: capitalize
      background-color: inherit
      border: 1px solid white
      border-radius: 5px

      &:hover
        color: #77c1ea
        background-color: white

  &__grid_type
    margin-top: 40px
    display: flex
    justify-content: center
    align-items: center
    font-size: 1rem

    button
      font-size: inherit
      text-transform: capitalize
      margin: 0 1%
      cursor: pointer

    >div
      font-size: inherit
      margin: 1% 10px 1% 0
      font-weight: 600
      color: #344861
      line-height: 25px
      vertical-align: middle
      text-transform: capitalize

      select
        font-size: 90%
        vertical-align: baseline
        font-family: sans-serif
        margin: 0 5px
        white-space: pre
        border-radius: 5px
        border-width: 1px
        border-style: solid
        border-color: rgb(166, 166, 166)
        border-image: initial
        background-color: rgb(248, 248, 248)
        cursor: pointer

  &__grid_table
    margin: 0
    padding: 0
    background: #fff
    user-select: none
    -ms-user-select: none
    -moz-user-select: none
    -webkit-user-select: none
    border: 2px solid #344861
    color: #354861

    &__congrats
      filter: blur(2px)
      background-color: transparent

    &tbody
      margin: 0
      padding: 0

    &_row
      display: flex
      justify-content: center

      &:nth-child(#{$type}n)
        border-bottom: none
        border-bottom: 2px solid #344861

      &:nth-child(#{$type*$type}n)
        border-bottom: none

      td
        margin: 0
        padding: 0
        text-align: center
        display: flex
        justify-content: center
        align-items: center
        height: $tdHeight
        width: $tdHeight
        font-size: $fontSize
        min-width: 20px
        min-height: 20px
        max-width: $maxTdHeight
        max-height: $maxTdHeight

        border-bottom: 1px solid #bec6d4
        border-right: 1px solid #bec6d4
        cursor: pointer

        &:nth-child(#{$type}n)
          border-right: none
          border-right: 2px solid #344861

        &:nth-child(#{$type*$type}n)
/* ... */

